--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,3 +2,4 @@
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "./partials/variable.scss";
 @import "./partials/utility.scss";
+@import "./pages/home.scss";
