--- a/resources/scss/partials/variable.scss
+++ b/resources/scss/partials/variable.scss
@@ -2,7 +2,7 @@
                            Roboto, "Helvetica Neue", Arial, "Noto Sans",
                            "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
-$blue : #389AF5;
+$blue : #3b95e9;
 
 $body-color : #414141;
 
