detail page dgn toast

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -3,3 +3,5 @@
 @import "./partials/variable.scss";
 @import "./partials/utility.scss";
 @import "./pages/home.scss";
+@import "./pages/discussions.scss";
+@import "./pages/profile.scss";
